# datafinder

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
datafinder/: __init__.py  agent.py  api.py  embed.py  normalize.py  openai_client.py  router.py  saved.py  schema.py  seed.py  store.py  tools.py
tests/: test_agent.py  test_api.py  test_normalize.py  test_router.py  test_session.py  test_store.py  test_stream.py  test_v4_saved.py
web/: app.js  index.html  style.css
