[project]
name = "datafinder"
version = "0.1.0"
description = "Research-dataset discovery agent: pgvector + OpenAI function calling"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.9",
]

[project.optional-dependencies]
openai = ["openai>=1.54"]
postgres = ["psycopg[binary]>=3.2", "pgvector>=0.3"]
dev = ["pytest>=8.3", "httpx>=0.27", "ruff>=0.7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["datafinder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]
